--- a/webshop-frontend/src/app/app.component.css
+++ b/webshop-frontend/src/app/app.component.css
@@ -1,16 +1,39 @@
 .navbar {
+
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
     height: 80px;
-    background-color: lightblue;
+    background-color: rgb(249, 254, 255);
+    box-shadow: 0 0 100px 0 rgb(233, 233, 233);
 }
 
 .navbar img {
 
-    height: 70 px;
+    height: 130px;
+    margin-top: -30px;
+    cursor: pointer;
+}
+
+.cart-box {
+
+    height: 80%;
+    width: 100px;
+    background-color: rgb(125, 194, 240);
+    cursor: pointer;
+
+}
+
+.cart-box img {
+
+    height: 30px;
+    width: 30px;
+    margin: 15% 0 0 10%;
 }
 
 .content {
-
-    min-height: 82vh;
+    position: relative;
+    min-height: 100%;
  } 
  
 
@@ -20,6 +43,6 @@
    width: 100%;
     height: 50px;
     background-color: rgb(120, 202, 161);
-    border-top: 1px solid grey
+    border-top: 1px solid grey;
 
 }
