--- a/webshop-frontend/src/app/item/item-list/item-list.component.css
+++ b/webshop-frontend/src/app/item/item-list/item-list.component.css
@@ -29,9 +29,21 @@ margin:10px;
 }
 
 
-/* .item-price { 
+.add-to-cart-button {
 
-
-
+    position: absolute;
+    background-color: white;
+    margin-top: -45px;
+    margin-left:98px;
+    visibility: hidden;
+    box-shadow: 0 0 10px 0 rgb(177, 175, 175);
+    border-radius: 30px;
+    padding: 10px;
+    cursor: pointer;
 }
-*/
+
+.item:hover .add-to-cart-button {
+
+
+    visibility: visible;
+}
