--- a/webshop-frontend/src/app/cart/cart.component.html
+++ b/webshop-frontend/src/app/cart/cart.component.html
@@ -1,1 +1,11 @@
-<p>cart works!</p>
+<!-- // {{items | json} -->
+
+<div (click)="onEmptyCart()" class="empty-cart-button">Tühjenda ostukorv</div>
+<div class="items-wrapper" >
+     <div class="item" *ngFor="let item of itemsInCart; let i = index">
+       <img src="{{item.imgSrc}}">
+       <div class="item-title">{{ item.title }}</div>    
+       <div class="item-price">{{ item.price }} €</div> 
+       <button (click)="onDeleteFromCart(i)" class= "delete-from-cart-button">x</button>
+
+
