--- a/webshop-frontend/src/app/app.component.css
+++ b/webshop-frontend/src/app/app.component.css
@@ -1,5 +1,5 @@
 .navbar {
-    
+    z-index: 999;
     position: fixed;
     top: 0;
     display: flex;
@@ -11,7 +11,7 @@
 }
 
 .navbar img {
-
+   
     height: 105px;
     margin-top: -30px;
     cursor: pointer;
