cart html, footer,navbar subscribe

--- a/webshop-frontend/src/app/app.component.html
+++ b/webshop-frontend/src/app/app.component.html
@@ -1,14 +1,10 @@
-<div class="navbar">
-
-    <img routerLink="/" src="assets\webshio.png">
-<div class="cart-box" routerLink="cart"><img src="assets\shopping-cart.png" alt=""></div>
-
-</div>
-
+<div class="page">
+<app-navbar></app-navbar>
 <div class="content">
 
     <router-outlet></router-outlet>
-
 </div>
 
-<div class="footer"></div>
+<app-footer></app-footer>
+
+</div>
