--- a/webshop-frontend/src/app/app.component.css
+++ b/webshop-frontend/src/app/app.component.css
@@ -1,51 +1,12 @@
-.navbar {
-    z-index: 999;
-    position: fixed;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 80px;
-    background-color: rgb(249, 254, 255);
-    box-shadow: 0 0 100px 0 rgb(233, 233, 233);
-}
-
-.navbar img {
-   
-    height: 105px;
-    margin-top: -30px;
-    cursor: pointer;
-}
-
-.cart-box {
-
-    height: 80%;
-    width: 100px;
-    background-color: rgb(125, 194, 240);
-    cursor: pointer;
-
-}
-
-.cart-box img {
-
-    height: 30px;
-    width: 30px;
-    margin: 15% 0 0 10%;
+.page {
+    position: relative;
+    min-height: 100vh;
 }
 
 .content {
-    margin-top: 80px;
-    /* position: relative; */
-    min-height: 100%;
+    padding: 80px;
+ 
+    /* min-height: 100%; */
  } 
  
 
-.footer {
-   /* position: flex; */
-   bottom: 0;
-   width: 100%;
-    height: 50px;
-    background-color: rgb(120, 202, 161);
-    border-top: 1px solid grey;
-
-}
