--- a/webshop-frontend/src/app/cart/cart.component.css
+++ b/webshop-frontend/src/app/cart/cart.component.css
@@ -35,7 +35,7 @@ padding: 0;
 }
 
 .item-price {
-    width: 50px;
+    width: 70px;
     margin-top: 40px;
 }
 
@@ -55,4 +55,17 @@ padding: 0;
 
     opacity: 1.0;
     transition: .5s;    
+    }
+
+    .sum-of-cart {
+        text-align: center;
+        font-size: 20px;
+        margin-top: 20px;
+    }
+
+    .empty-cart {
+        width: 300px;
+        height: 300px;
+        margin: auto;
+        /* text-align: center; */
     }
