--- a/webshop-frontend/src/app/item/item-edit/item-edit.component.html
+++ b/webshop-frontend/src/app/item/item-edit/item-edit.component.html
@@ -1,1 +1,13 @@
+<button class="main-button back" routerLink="/admin">Tagasi</button>
 
+<form (ngSubmit)="onSubmit(itemEditForm)" [formGroup]="itemEditForm">
+    <label>Nimetus</label><br>
+    <input type="text" formControlName="title" required><br><br>
+    <label>Hind</label><br>
+    <input type="text" formControlName="price" required><br><br>
+    <label>Pilt</label><br>
+    <input type="text" formControlName="imgSrc" required><br><br>
+    <label>Kategooria</label><br>
+    <input type="text" formControlName="category" required><br><br>
+    <button [disabled]="itemEditForm.invalid" class="main-button add">Sisesta</button>
+</form>
