--- a/webshop-frontend/src/app/item/item-add/item-add.component.html
+++ b/webshop-frontend/src/app/item/item-add/item-add.component.html
@@ -1,4 +1,4 @@
-<button class="main-button back" routerLink="/admin">Tagasi</button>
+<button class="main-button back" routerLink="/admin">{{ 'Tagasi' | translate }}</button>
 
 <form (ngSubmit)="onSubmit(itemAddForm)" #itemAddForm="ngForm">
     <label>Nimetus</label><br>
