--- a/webshop-frontend/src/app/item/item-list/item-list.component.css
+++ b/webshop-frontend/src/app/item/item-list/item-list.component.css
@@ -1,3 +1,26 @@
+.filter-bar {
+    display: flex;
+    align-items: center;
+    background-color: #f2f2f2;
+    height: 40px;
+    margin: 10px;
+    font-size: 22px;
+    padding-left: 10px;
+}
+
+.filter-value { 
+    margin-left: 10px; 
+    cursor: pointer;   
+}
+
+.filter-value { 
+    margin-left: 10px;    
+}
+
+.filter-value { 
+    margin-left: 10px;    
+}
+
 .items-wrapper {
 
 padding: 10px;
