--- a/webshop-frontend/src/app/item/item-add/item-add.component.html
+++ b/webshop-frontend/src/app/item/item-add/item-add.component.html
@@ -4,7 +4,7 @@
     <label>Nimetus</label><br>
     <input type="text" name="title" ngModel required><br><br>
     <label>Hind</label><br>
-    <input type="text" name="price" ngModel required><br><br>
+    <input type="number" name="price" ngModel required><br><br>
     <label>Pilt</label><br>
     <input type="text" name="imgSrc" ngModel required><br><br>
     <label>Kategooria</label><br>
