--- a/webshop-frontend/src/app/item/item-list/item-list.component.html
+++ b/webshop-frontend/src/app/item/item-list/item-list.component.html
@@ -12,6 +12,6 @@
       <img src="{{item.imgSrc}}">
        <div (click)="onAddToCart(item)" class ="add-to-cart-button">Lisa ostukorvi</div>
        <div class="item-title">{{ item.title }}</div>    
-       <div class="item-price">{{item.price}} €</div>
+       <div class="item-price">{{item.price.toFixed(2) }} €</div>
    </div>
 </div>
