--- a/webshop-frontend/src/app/global/navbar/navbar.component.html
+++ b/webshop-frontend/src/app/global/navbar/navbar.component.html
@@ -4,6 +4,13 @@
         <img  class="logo" routerLink="/" src="assets\webshio.png">
         <!-- <button (click)="useLanguage('en')">en</button>
         <button (click)="useLanguage('ee')">ee</button> --> 
+<div>
+<div class="admin-button" *ngIf="isLoggedIn" routerLink="/admin">Admin view</div>
+<div class="logout-button" *ngIf="isLoggedIn" (click)="onLogout()">Logi välja</div>
+<div class="login-button" *ngIf="!isLoggedIn" routerLink="/login">Logi sisse</div>
+<div class="signup-button" *ngIf="!isLoggedIn" routerLink="/signup">Registreeru</div>
+</div>
+
         <div>
             <img class="lang-1" (click)="useLanguage('ee')" src="assets/i18n/ee.png" >
             <img class="lang-2" (click)="useLanguage('en')" src="assets/i18n/en.png" >
