--- a/webshop-frontend/src/app/admin/admin.component.html
+++ b/webshop-frontend/src/app/admin/admin.component.html
@@ -2,4 +2,5 @@
 <div class="admin-buttons">
 <button class="main-button admin" routerLink="/item/add">Lisa tooteid</button>
 <button class="main-button admin" routerLink="/item/view">Vaata/muuda tooteid</button>
+<button class="main-button admin" routerLink="/category/view">Vaata kategooiaid</button>
 </div>
