--- a/webshop-frontend/src/app/item/item-add/item-add.component.html
+++ b/webshop-frontend/src/app/item/item-add/item-add.component.html
@@ -8,6 +8,10 @@
     <label>Pilt</label><br>
     <input type="text" name="imgSrc" ngModel required><br><br>
     <label>Kategooria</label><br>
-    <input type="text" name="category" ngModel required><br><br>
+    <select ngModel name="category">
+        <option value="" disabled selected>Vali kategooria</option>
+        <option *ngFor="let category of categories" [value]="category.name">{{ category.name }} </option>
+    </select><br><br>
+    <!-- <input type="text" name="category" ngModel required><br><br> -->
     <button [disabled]="itemAddForm.invalid" class="main-button add">Sisesta</button>
 </form>
