--- a/webshop-frontend/src/app/item/item-list/item-list.component.css
+++ b/webshop-frontend/src/app/item/item-list/item-list.component.css
@@ -65,6 +65,13 @@ margin:10px;
     cursor: pointer;
 }
 
+.add-to-cart-button img {
+
+    width: 30px;
+    height: 30px;
+    margin: 10px;    
+}
+
 .item:hover .add-to-cart-button {
 
 
